welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: not a legal formal parameter
	if (you => 8 || date => 8) {
                     ^